[tool.poetry]
name = "mtgardener"
version = "0.1.0"
description = ""
authors = ["Eitan Romanoff <eitan.romanoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "master" }
PyYAML = "^6.0"
pygsheets = {git = "git@github.com:nithinmurali/pygsheets.git"}
google-auth-oauthlib = "^0.5.1"
asgiref = "^3.5.0"
gspread-asyncio = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
