[tool.poetry]
name = "mtgardener"
version = "0.1.0"
description = ""
authors = ["Eitan Romanoff <eitan.romanoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "master" }
PyYAML = "^6.0"
google-auth-oauthlib = "^0.7.1"
asgiref = "^3.5.0"
gspread-asyncio = "^1.8.1"
arrow = "^1.2.3"
python_log_indenter = "^0.9"
enlighten = "1.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
